<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/harrypottersnitch"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6dffffff"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/scoreBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TopStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/gold"
                    android:text="@string/teamA" />

                <TextView
                    android:id="@+id/score_forA"
                    style="@style/ScoreCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    style="@style/MyButton"
                    android:layout_width="wrap_content"
                    android:onClick="forTeamA"
                    android:tag="1"
                    android:text="@string/ten_points" />

                <Button
                    style="@style/MyButton"
                    android:layout_width="wrap_content"
                    android:onClick="forTeamA"
                    android:tag="2"
                    android:text="@string/five_points" />

                <Button
                    style="@style/MyButton"
                    android:layout_width="wrap_content"
                    android:onClick="forTeamA"
                    android:tag="3"
                    android:text="@string/foul" />

                <ImageView
                    style="@style/ImageView"
                    android:contentDescription="@string/todo"
                    android:tag="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TopStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:text="@string/teamB" />

                <TextView
                    android:id="@+id/score_forB"
                    style="@style/ScoreCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    style="@style/MyButton"
                    android:layout_width="wrap_content"
                    android:onClick="forTeamB"
                    android:tag="1"
                    android:text="@string/ten_points" />

                <Button
                    style="@style/MyButton"
                    android:layout_width="wrap_content"
                    android:onClick="forTeamB"
                    android:tag="2"
                    android:text="@string/five_points" />

                <Button
                    style="@style/MyButton"
                    android:layout_width="wrap_content"
                    android:onClick="forTeamB"
                    android:tag="3"
                    android:text="@string/foul" />

                <ImageView
                    style="@style/ImageView"
                    android:contentDescription="@string/snitch_img"
                    android:tag="2" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoreBox"
            android:orientation="vertical">


            <TextView
                android:id="@+id/comment"
                style="@style/CommentSection"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty_five"
                android:hint="@string/comment" />

            <TextView
                android:id="@+id/result"
                style="@style/CommentSection"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:hint="@string/description" />
        </LinearLayout>

        <Button
            android:id="@+id/reset"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_below="@+id/comments"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/sixty_dp"
            android:layout_marginStart="@dimen/sixty_dp"
            android:layout_marginTop="@dimen/twelve"
            android:onClick="reset"
            android:text="@string/reset" />
    </RelativeLayout>
</ScrollView>